Enhance Java 21 compatibility and improve thread management in App.java. Added Java toolchain configuration and enabled preview features. Introduced a scheduled garbage collection mechanism and replaced traditional threads with virtual threads for background and console processing, ensuring better resource management and performance.